fixed the spacing with p

--- a/docs/css/projects.css
+++ b/docs/css/projects.css
@@ -9,9 +9,6 @@ h3 {
     font-size: 1.5rem;
 }
 
-p {
-    padding-bottom: 3vh;
-}
 
 .projects_page {
     padding-top: 3vh;
@@ -27,6 +24,10 @@ p {
     padding: 20px;
     border-radius: 15px;
     box-shadow: 0px 0px 40px rgba(255, 255, 255, 0.2);
+}
+
+.project p {
+    padding-bottom: 2.5vh;
 }
 
 .btn {
